# open-trading-api

./: .env.example  .gitignore  agent.md  architecture.md  config.py  fo_eurex_code.mst  pyproject.toml  schema.md  test_auth.py  test_future.py  test_trading.py
backtest/: regime_states.csv
backtester/: kis_auth.py
examples_user/: kis_auth.py
future/: main.py  night_data_collector.py  night_ws_collector.py  supervisor.py  ws_manager.py
future/engines/: __init__.py  execution_engine.py  execution_pressure_engine.py  foreign_flow_engine.py  (+9 more)
scratch/: analyze_market_incident.py  analyze_today_db.py  backtest_partial_tp.py  backtest_pyramiding_partial.py  backtest_this_week.py  backtest_today_optimization.py  backtest_today_relaxed.py  backtest_today_tuning.py  buy_one_contract.py  calculate_current_score.py  check_all_codes_candles.py  check_all_db.py  check_available_candles.py  check_candles_at_254.py  check_candles_oi_range.py  check_current_real_price.py  check_db_candles.py  check_db_inserts.py  check_db_more.py  check_executions_today.py  check_futures.py  check_futures_list.py  check_kis_executions_v2.py  check_kis_executions_v3.py  check_kis_executions_v4.py  check_kis_history.py  check_kis_night_candles.py  check_live_ticks.py  check_night_candles.py  check_orders_all.py  check_sheets.py  check_signal_details.py  check_trades.py  debug_balance.py  debug_eurex_night.py  debug_kis_futures.py  debug_krx_night.py  delete_old_positions.py  fetch_past_candles.py  fill_candles.py  (+39 more)
strategy_builder/: kis_auth.py
trading/: __init__.py  account.py  order.py
(+8 files in other folders)
