[project]
name = "kis-github"
version = "1.0.0"
description = "korea investment open api sample codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "gspread>=6.2.1",
    "pandas>=2.3.1",
    "psutil>=7.2.2",
    "pycryptodome>=3.23.0",
    "pymysql>=1.2.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.2.2",
    "pywin32>=312",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "websockets>=15.0.1",
]
